clusters/home/apps/boardgames/boardgames/configs/boardgames-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: boardgames-ingressroute
  namespace: boardgames
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://boardgames.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Boardgames
    gethomepage.dev/group: Entertainment
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: boardgames # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Boardgames
    #gethomepage.dev/widget.type: "boardgames"
    #gethomepage.dev/widget.url: "https://boardgames.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`boardgames.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: bgg-inventory-nextjs
      port: 3000
  tls:
    secretName: boardgames-certificate-secret
